# RaspberryPi-Pico

./: .gitignore  README.md
AllPinAsOutputs/: AllPinAsOutputs.c  CMakeLists.txt
Blink_LED_Pico_W/: CMakeLists.txt  blinking_led.c
Blinking_LED/: CMakeLists.txt  blinking_led.c
WiFi_Connection/: CMakeLists.txt  picow_ntp_client.c
WiFi_Scan/: CMakeLists.txt
WiFi_UART_Messages/: CMakeLists.txt
WiegandReader/: CMakeLists.txt  WiegandReader.c
WiegandWriter/: CMakeLists.txt  WiegandWriter.c
